--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=production
-VUE_APP_TITLE=Parspack Test Api
-VUE_APP_API_URL=http://api.parspack.local
+VUE_APP_TITLE=Simple Task
+VUE_APP_API_URL=http://localhost:8000
